# substrate_sign_flutter

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/substrate_sign_flutter/: SubstrateSignFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/substrate_sign_flutter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: plugin_test.dart  widget_test.dart
example/test_driver/: app.dart  app_test.dart  test_app.dart
ios/: substrate_sign_flutter.podspec
ios/Classes/: SubstrateSignFlutterPlugin.h  SubstrateSignFlutterPlugin.m  SwiftSubstrateSignFlutterPlugin.swift
lib/: substrate_sign_flutter.dart
rust/: Cargo.toml  cbindgen.toml
rust/src/: lib.rs  sr25519.rs
scripts/: build.sh  variables.sh
test/: substrate_sign_flutter_test.dart
