[package]
name = "substrate-sign"
version = "0.1.0"
authors = ["Hanwen Chneg <heawen.cheng@gmail.com>"]
edition = "2018"

[lib]
name = "substrateSign"
crate-type = ["staticlib", "cdylib"]

[dependencies]
base58 = "0.1.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = { version = "0.6.1", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
lazy_static = "1.3.0"
regex = "1.2.1"
schnorrkel = "0.8.5"
serde_json = "1.0"
blake2-rfc = "0.2.18"
ethsign = { version = "0.7.3", default-features = false, features = ["pure-rust"] }
rustc-hex = "2.0.1"
